--- a/Wb/template/patientlogin.html
+++ b/Wb/template/patientlogin.html
@@ -11,9 +11,6 @@
     <!-- Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
-    <style>
-   
-    </style>
 </head>
 <body>
 
@@ -23,12 +20,12 @@
     </div>
 
     <h3 class="text-center mb-3">Welcome Back</h3>
-    <p class="text-center text-muted mb-4">Login to your account</p>
+    <p class="text-center text-muted mb-4">Login to your Patient account</p>
 
     <!-- Doctor / Patient -->
     <div class="text-center mb-4 role-btn">
-    <a href="/doctorsignup.html"><button class="btn btn-outline-primary me-2">Doctor</button></a>
-    <a href="/patientsignup.html"><button class="btn btn-outline-success">Patient</button></a>
+    <a href=""><button class="btn btn-outline-primary me-2">Doctor</button></a>
+    <a href=""><button class="btn btn-outline-success">Patient</button></a>
     </div>
 
     <!-- Login Form -->
@@ -50,7 +47,7 @@
             </div>
             <a href="#" class="text-decoration-none">Forgot Password?</a>
            
-            <a href="/doctorsignup.html" class="text-decoration-none">Sign/up</a>
+            <a href="/Signup.html" class="text-decoration-none">Sign/up</a>
         </div>
 
         <div class="d-grid">
