--- a/Wb/template/Patientsignup.html
+++ b/Wb/template/Patientsignup.html
@@ -1,18 +1,17 @@
+{% extends "base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sign Up</title>
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+{% block title %}
+Sign Up
+{% endblock %}
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'style/style.css' %}">
-</head>
-<body>
+{% block head %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+<link rel="stylesheet" href="{% static 'style/style.css' %}">
+{% endblock %}
+
+{% block body %}
 
 <div class="login-card">
     <div class="icon-box">
@@ -22,13 +21,11 @@
     <h3 class="text-center mb-3">Create Account</h3>
     <p class="text-center text-muted mb-4">Sign up as Patient</p>
 
-    <!-- Role Buttons (UI only) -->
     <div class="text-center mb-4 role-btn">
-        <a href="/doctorsignup.html"><button type="button"  class="btn btn-outline-primary me-2">Doctor</button></a>
-        <a href=""><button type="button" class="btn btn-outline-success">Patient</button></a>
+        <a href="/doctorsignup.html" class="btn btn-outline-primary me-2">Doctor</a>
+        <a href="#" class="btn btn-outline-success">Patient</a>
     </div>
 
-    <!-- Signup Form -->
     <form method="POST">
         {% csrf_token %}
 
@@ -46,10 +43,6 @@
             <label class="form-label">Password</label>
             <input type="password" class="form-control" placeholder="••••••••" required>
         </div>
-        <!-- <div class="mb-3">
-            <label class="form-label">Password</label>
-            <input type="password" class="form-control" placeholder="••••••••" required>
-        </div> -->
 
         <div class="mb-3">
             <label class="form-label">Confirm Password</label>
@@ -67,5 +60,4 @@
     </form>
 </div>
 
-</body>
-</html>
+{% endblock %}
