--- a/Wb/template/patientlogin.html
+++ b/Wb/template/patientlogin.html
@@ -1,17 +1,22 @@
+{% extends "base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
 
-    <!-- Bootstrap 5 CDN -->
+
+    {% block title %}
+    Login
+
+    {% endblock %}
+{% block head %}    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'style/style.css' %}">
-    <!-- Icons -->
+   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 </head>
+{% endblock  %}
+ {% block body %}
+
+
 <body>
 
 <div class="login-card">
@@ -47,7 +52,7 @@
             </div>
             <a href="#" class="text-decoration-none">Forgot Password?</a>
            
-            <a href="/Signup.html" class="text-decoration-none">Sign/up</a>
+            <a href="/patientsignup.html" class="text-decoration-none">Sign/up</a>
         </div>
 
         <div class="d-grid">
@@ -57,4 +62,5 @@
 </div>
 
 </body>
-</html>
+{% endblock  %}
+
