--- a/Wb/template/Patientsignup.html
+++ b/Wb/template/Patientsignup.html
@@ -31,22 +31,22 @@ Sign Up
 
         <div class="mb-3">
             <label class="form-label">Full Name</label>
-            <input type="text" class="form-control" placeholder="John Doe" required>
+            <input type="text" name="name" class="form-control" placeholder="John Doe" required>
         </div>
 
         <div class="mb-3">
             <label class="form-label">Email</label>
-            <input type="email" class="form-control" placeholder="email@example.com" required>
+            <input type="email" name="email" class="form-control" placeholder="email@example.com" required>
         </div>
 
         <div class="mb-3">
             <label class="form-label">Password</label>
-            <input type="password" class="form-control" placeholder="••••••••" required>
+            <input type="password"  name="Password" class="form-control" placeholder="••••••••" required>
         </div>
 
         <div class="mb-3">
             <label class="form-label">Confirm Password</label>
-            <input type="password" class="form-control" placeholder="••••••••" required>
+            <input type="password" name="Confirm_password" class="form-control" placeholder="••••••••" required>
         </div>
 
         <div class="d-grid">
@@ -56,8 +56,17 @@ Sign Up
         <p class="text-center mt-3">
             Already have an account?
             <a href="/index.html" class="text-decoration-none fw-semibold">Login</a>
+
         </p>
+        {% if messages %}
+    {% for message in messages  %}
+    <div><div class="alert alert-danger text-center">
+            {{ message }}
+        </div></div>
+    
+    {% endfor %}
     </form>
 </div>
-
+ 
+ {% endif %}
 {% endblock %}
