--- a/Wb/template/patientlogin.html
+++ b/Wb/template/patientlogin.html
@@ -52,7 +52,7 @@
             </div>
             <a href="#" class="text-decoration-none">Forgot Password?</a>
            
-            <a href="/patientsignup.html" class="text-decoration-none">Sign/up</a>
+            <a href="/Patientsignup.html" class="text-decoration-none">Sign/up</a>
         </div>
 
         <div class="d-grid">
