--- a/Wb/template/doctorsignup.html
+++ b/Wb/template/doctorsignup.html
@@ -64,6 +64,10 @@ Doctor Signup
             <input type="password" name="password" class="form-control" placeholder="••••••••" required>
         </div>
 
+        <div class="mb-3">
+            <label class="form-label">Confirm Password</label>
+            <input type="password" name="Confirm_password" class="form-control" placeholder="••••••••" required>
+        </div>
         <div class="d-flex justify-content-between align-items-center mb-3">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox">
@@ -80,7 +84,7 @@ Doctor Signup
 
         <p class="text-center mt-2">
             Already have an account?
-            <a href="/patientlogin/" class="text-decoration-none fw-semibold">Login</a>
+            <a href="/index.html" class="text-decoration-none fw-semibold">Login</a>
         </p>
 
         {% if messages %}
