--- a/Wb/template/index.html
+++ b/Wb/template/index.html
@@ -20,22 +20,23 @@ Login
     </div>
 
     <h3 class="text-center mb-3">Welcome Back</h3>
-    <p class="text-center text-muted mb-4">Login to your account</p>
+    <p class="text-center text-muted mb-4">Login as a Doctor account</p>
 
     <div class="text-center mb-4 role-btn">
         <a href="/doctorsignup.html" class="btn btn-outline-primary me-2">Doctor</a>
         <a href="/patientlogin.html" class="btn btn-outline-success">Patient</a>
     </div>
 
-    <form>
+    <form method="post">
+        {% csrf_token %}
         <div class="mb-3">
             <label class="form-label">Email</label>
-            <input type="email" class="form-control" placeholder="doctor@email.com">
+            <input type="email" name = "email" class="form-control" placeholder="doctor@email.com">
         </div>
 
         <div class="mb-3">
             <label class="form-label">Password</label>
-            <input type="password" class="form-control" placeholder="••••••••">
+            <input type="password" name="password" class="form-control" placeholder="••••••••">
         </div>
 
         <div class="d-flex justify-content-between align-items-center mb-3">
@@ -50,6 +51,11 @@ Login
         <div class="d-grid">
             <button class="btn btn-primary login-btn">Login</button>
         </div>
+        {% if messages %}
+            {% for message in messages %}
+                <p class="text-danger text-center mt-2">{{ message }}</p>
+            {% endfor %}
+        {% endif %}
     </form>
 </div>
 
