--- a/Wb/template/patientlogin.html
+++ b/Wb/template/patientlogin.html
@@ -29,20 +29,21 @@
 
     <!-- Doctor / Patient -->
     <div class="text-center mb-4 role-btn">
-    <a href=""><button class="btn btn-outline-primary me-2">Doctor</button></a>
+    <a href="/index.html"><button class="btn btn-outline-primary me-2">Doctor</button></a>
     <a href=""><button class="btn btn-outline-success">Patient</button></a>
     </div>
 
     <!-- Login Form -->
-    <form>
+    <form method="post">
+        {% csrf_token %}
         <div class="mb-3">
             <label class="form-label">Email</label>
-            <input type="email" class="form-control" placeholder="doctor@email.com">
+            <input type="email" name="email" class="form-control" placeholder="doctor@email.com">
         </div>
 
         <div class="mb-3">
             <label class="form-label">Password</label>
-            <input type="password" class="form-control" placeholder="••••••••">
+            <input type="password" name="password" class="form-control" placeholder="••••••••">
         </div>
 
         <div class="d-flex justify-content-between align-items-center mb-3">
@@ -58,6 +59,11 @@
         <div class="d-grid">
             <button class="btn btn-primary login-btn">Login</button>
         </div>
+         {% if messages %}
+            {% for message in messages %}
+                <p class="text-danger text-center mt-2">{{ message }}</p>
+            {% endfor %}
+        {% endif %}
     </form>
 </div>
 
